@@ -1092,6 +1092,15 @@ caster will float, and is able to walk through walls.  However, the caster \
 is unable to manipulate most matter through will, and cannot carry equipment \
 through doors.
 
+PRAYER_ETERNAL_ITEM=PRAYER_ETERNALITEM
+PRAYER_ETERNALITEM=<ABILITY>\
+Usage    : PRAY "ETERNAL ITEM" [TARGET ITEM]\n\r\
+Example  : pray "ETERNAL ITEM" sword\n\r\
+This overwhelmingly powerful prayer makes the item impervious to damage or \
+destruction, forever.  To cast the prayer, the item must be infused with \
+the power of their deity.  The prayer will cost all of the casters available \
+mana, and cause them to permanently lose 100 base mana.
+
 PRAYER_EXTINGUISH=<ABILITY>\
 Usage    : PRAY EXTINGUISH [TARGET NAME] \n\r\
 Example  : pray extinguish orc\n\r\
