@@ -21,6 +21,7 @@
  20. AREAS now supports EXPLORED argument
  21. New command: ASSIST 
  22. PUSH and PULL now take a tick, and can fail from weight, but supports assist
+ 23. New Prayer: Eternal Item
 
 # Build 5.9.12 Release 1/17/2022
   *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
